Implement spell list context menu foundations

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -176,7 +176,9 @@
     <Compile Include="Sources\Config\Config.cs" />
     <Compile Include="Sources\Controls\Common\FilteredComboBox.cs" />
     <Compile Include="Sources\Controls\Common\FriendlyLabel.cs" />
-    <Compile Include="Sources\Controls\Common\SpellSelectionList.cs" />
+    <Compile Include="Sources\Controls\SpellSelectList\SpellSelectContextMenu.cs" />
+    <Compile Include="Sources\Controls\SpellSelectList\SpellSelectionEntry.cs" />
+    <Compile Include="Sources\Controls\SpellSelectList\SpellSelectionList.cs" />
     <Compile Include="Sources\Controls\Common\SyntaxHighlightBox.cs" />
     <Compile Include="Sources\Controls\Visual\AbstractVisualListEntry.cs" />
     <Compile Include="Sources\Controls\Visual\IVisualListEntry.cs" />
