--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -176,13 +176,12 @@
     <Compile Include="Sources\Config\Config.cs" />
     <Compile Include="Sources\Controls\Common\FilteredComboBox.cs" />
     <Compile Include="Sources\Controls\Common\FriendlyLabel.cs" />
-    <Compile Include="Sources\Controls\SpellSelectList\SpellSelectContextMenu.cs" />
     <Compile Include="Sources\Controls\SpellSelectList\SpellSelectionEntry.cs" />
     <Compile Include="Sources\Controls\SpellSelectList\SpellSelectionList.cs" />
     <Compile Include="Sources\Controls\Common\SyntaxHighlightBox.cs" />
-    <Compile Include="Sources\Controls\Visual\AbstractVisualListEntry.cs" />
-    <Compile Include="Sources\Controls\Visual\IVisualListEntry.cs" />
-    <Compile Include="Sources\Controls\Visual\VisualContextMenu.cs" />
+    <Compile Include="Sources\Controls\Common\AbstractListEntry.cs" />
+    <Compile Include="Sources\Controls\Common\IListEntry.cs" />
+    <Compile Include="Sources\Controls\Common\ListContextMenu.cs" />
     <Compile Include="Sources\Controls\Visual\VisualMissileSelectMenuItem.cs" />
     <Compile Include="Sources\Controls\Visual\VisualPasteListEntry.cs" />
     <Compile Include="Sources\Controls\Visual\VisualEffectListEntry.cs" />
