--- a/HeadlessExport/HeadlessExport.csproj
+++ b/HeadlessExport/HeadlessExport.csproj
@@ -46,6 +46,7 @@
     <Compile Include="HeadlessDbc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpellFixer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
