--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -171,6 +171,8 @@
     <Compile Include="ImportExportWindow.xaml.cs">
       <DependentUpon>ImportExportWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Sources\Controls\SpellSelectList\PinIconConverter.cs" />
+    <Compile Include="Sources\Controls\SpellSelectList\RelayCommand.cs" />
     <Compile Include="Sources\Binding\Binding.cs" />
     <Compile Include="Sources\Binding\BindingType.cs" />
     <Compile Include="Sources\Binding\BindingEntry.cs" />
