--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -180,7 +180,10 @@
     </Compile>
     <Compile Include="Sources\AI\AIController.cs" />
     <Compile Include="Sources\AI\AiSpellDefinition.cs" />
+    <Compile Include="Sources\AI\AiSpellMapper.cs" />
+    <Compile Include="Sources\AI\AiSpellResult.cs" />
     <Compile Include="Sources\AI\OpenAIClient.cs" />
+    <Compile Include="Sources\AI\SpellDbcEnumProvider.cs" />
     <Compile Include="Sources\Controls\SpellSelectList\PinIconConverter.cs" />
     <Compile Include="Sources\Controls\SpellSelectList\RelayCommand.cs" />
     <Compile Include="Sources\Binding\Binding.cs" />
