--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -179,6 +179,8 @@
       <DependentUpon>ImportExportWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Sources\AI\AIController.cs" />
+    <Compile Include="Sources\AI\AiEnumRegistry.cs" />
+    <Compile Include="Sources\AI\AISemanticRegistry.cs" />
     <Compile Include="Sources\AI\AiSpellDefinition.cs" />
     <Compile Include="Sources\AI\AiSpellMapper.cs" />
     <Compile Include="Sources\AI\AiSpellResult.cs" />
