Implement similar spell matching and update AI model, add basics for other AI modes
Perf issue in this commit from SELECT * FROM spell usage

--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -181,6 +181,8 @@
     <Compile Include="Sources\AI\AIController.cs" />
     <Compile Include="Sources\AI\AiEnumRegistry.cs" />
     <Compile Include="Sources\AI\AISemanticRegistry.cs" />
+    <Compile Include="Sources\AI\AiSimilarSpellFinder.cs" />
+    <Compile Include="Sources\AI\AiSimilarSpellSummary.cs" />
     <Compile Include="Sources\AI\AiSpellDefinition.cs" />
     <Compile Include="Sources\AI\AiSpellMapper.cs" />
     <Compile Include="Sources\AI\AiSpellResult.cs" />
