--- a/SpellGUIV2/packages.config
+++ b/SpellGUIV2/packages.config
@@ -12,6 +12,7 @@
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net451" />
   <package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45" />
   <package id="MySql.Data" version="8.0.29" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="NLog" version="4.7.0" targetFramework="net451" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net451" userInstalled="true" />
