--- a/SpellGUIV2/SpellEditor.csproj
+++ b/SpellGUIV2/SpellEditor.csproj
@@ -18,6 +18,21 @@
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -340,6 +355,18 @@
     <EmbeddedResource Include="Costura32\SQLite.Interop.dll" />
     <EmbeddedResource Include="Costura64\SQLite.Interop.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.8">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.8 %28x86 et x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.104.0\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.104.0\build\net451\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -357,8 +384,33 @@
   <Import Project="..\packages\Fody.6.9.2\build\Fody.targets" Condition="Exists('..\packages\Fody.6.9.2\build\Fody.targets')" />
   <Import Project="..\packages\Costura.Fody.6.0.0\build\Costura.Fody.targets" Condition="Exists('..\packages\Costura.Fody.6.0.0\build\Costura.Fody.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>echo ProjectDir: $(ProjectDir)
-echo TargetDir: $(TargetDir)
+    <PostBuildEvent>@echo off
+if not exist "$(TargetDir)Libraries" mkdir "$(TargetDir)Libraries"
+
+rem ---- Move all DLLs except app DLL ----
+for %25%25f in ("$(TargetDir)*.dll") do (
+    if /I not "%25%25~nxf"=="SpellEditor.exe" (
+        move "%25%25f" "$(TargetDir)Libraries\"
+    )
+)
+
+rem ---- Move all PDBs except app PDB ----
+for %25%25f in ("$(TargetDir)*.pdb") do (
+    if /I not "%25%25~nxf"=="SpellEditor.pdb" (
+        move "%25%25f" "$(TargetDir)Libraries\"
+    )
+)
+
+for %25%25f in ("$(TargetDir)*.dll.config") do (
+    move "%25%25f" "$(TargetDir)Libraries\"
+)
+
+rem ---- Remove unwanted XML doc files, keep config.xml ----
+for %25%25f in ("$(TargetDir)*.xml") do (
+    if /I not "%25%25~nxf"=="config.xml" (
+        del "%25%25f"
+    )
+)
 
 xcopy "$(ProjectDir)..\Documentation\*" "$(TargetDir)" /E /Y /I</PostBuildEvent>
   </PropertyGroup>
