--- a/SpellGUIV2/packages.config
+++ b/SpellGUIV2/packages.config
@@ -1,25 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.9" targetFramework="net452" />
-  <package id="ControlzEx" version="3.0.2.4" targetFramework="net451" />
-  <package id="Costura.Fody" version="1.6.2" targetFramework="net451" developmentDependency="true" />
+  <package id="ControlzEx" version="4.4.0" targetFramework="net48" />
+  <package id="Costura.Fody" version="6.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net452" />
-  <package id="Fody" version="2.0.0" targetFramework="net451" developmentDependency="true" />
+  <package id="Fody" version="6.9.2" targetFramework="net48" developmentDependency="true" />
   <package id="Google.Protobuf" version="3.19.4" targetFramework="net452" />
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net452" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net452" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net452" />
-  <package id="MahApps.Metro" version="1.3.0" targetFramework="net451" />
-  <package id="MahApps.Metro.Resources" version="0.2.1.0" targetFramework="net45" />
+  <package id="MahApps.Metro" version="2.4.11" targetFramework="net48" />
+  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net48" />
   <package id="MySql.Data" version="8.0.29" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="NLog" version="4.7.0" targetFramework="net451" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
   <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net451" userInstalled="true" />
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net451" />
   <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net451" />
   <package id="System.Data.SQLite.Linq" version="1.0.104.0" targetFramework="net451" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net452" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net48" />
 </packages>
